--- a/templates/settings-client.html
+++ b/templates/settings-client.html
@@ -200,7 +200,7 @@
     </div>
     <script src="../static/js/home.js"></script>
     <script src="../static/js/sidebar.js"></script>
-    <script src="../static/js/clients.js"></script>
+    <script src="../static/js/s-clients.js"></script>
    
     <script>
 document.addEventListener('DOMContentLoaded', () => {
