--- a/templates/work.html
+++ b/templates/work.html
@@ -86,7 +86,9 @@
                 <a href="/home" class="back-btn">
                     <i class='bx bx-chevron-left'></i>
                 </a>
-                <div class="text">Detalles</div>
+                <div class="text">
+                    <a href="home.html" style="color: #695cfe; text-decoration: none;">Inicio</a> > Detalles
+                </div>
             </div>
         </div>
 
