--- a/static/css/clients.css
+++ b/static/css/clients.css
@@ -413,7 +413,7 @@ body.dark .home .text {
 body.dark .card-client:hover{
     transform: scale(1.03);
     transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    box-shadow: 0 8px 100px #dadcff25;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.041);
 }
 
 .card-client img {
