usuarios aun sin terminar, detalles menores

--- a/templates/settings-client.html
+++ b/templates/settings-client.html
@@ -106,7 +106,18 @@
     </nav>
     <section class="home">
         <div class="home-header">
-            <div class="text">Clientes</div>
+            <div class="back-button">
+                <a href="/settings" class="back-btn">
+                    <i class='bx bx-chevron-left'></i>
+                </a>
+                <div class="text">
+                    <a href="/settings" style="color: #695cfe; text-decoration: none;">Configuracion</a> > Gestion de Clientes
+                </div>
+            </div>
+        </div>
+
+        <div class="home-header">
+            <div class="text"></div>
             <button class="add-btn" type="button" id="openModal">
                 <span class="button__text">Añadir</span>
                 <span class="button__icon">
