--- a/templates/home.html
+++ b/templates/home.html
@@ -298,13 +298,13 @@
                             <div class="form-group">
                                 <label for="total-cost">Costo total:</label>
                                 <input type="number" id="total-cost" name="total-cost" required
-                                    oninput="formatearMoneda()" step="0.01">
+                                     step="0.01">
                             </div>
                             <div class="form-group">
                                 <label for="down-payment">Abono:</label>
                                 <div style="display: flex; align-items: center;">
                                     <input type="number" id="down-payment" name="down-payment"
-                                        oninput="formatearMoneda()" step="0.01">
+                                         step="0.01">
                                 </div>
                             </div>
                             <div class="form-group">
