--- a/templates/settings.html
+++ b/templates/settings.html
@@ -26,7 +26,11 @@
         </header>
         <div class="menu-bar">
             <div class="menu">
-                <ul class="menu-links">
+                <li class="search-box">
+                    <i class='bx bx-search icon'></i>
+                    <input type="text" placeholder="Buscar..." id="searchInput">
+                </li>
+                <ul class="menu-links" id="home">
                     <li class="nav-link">
                         <a href="{{ url_for('home') }}">
                             <i class='bx bx-home-alt icon'></i>
@@ -49,19 +53,19 @@
                         </a>
                     </li>
                     <li class="nav-link" id="aprobacion">
-                        <a href="#">
+                        <a href="{{ url_for('approval') }}">
                             <i class='bx bx-check-circle icon'></i>
                             <span class="text nav-text">Aprobación</span>
                         </a>
                     </li>
                     <li class="nav-link" id="elaboracion">
-                        <a href="#">
+                        <a href="{{ url_for('crafting') }}">
                             <i class='bx bx-edit icon'></i>
                             <span class="text nav-text">Elaboración</span>
                         </a>
                     </li>
                     <li class="nav-link" id="entrega">
-                        <a href="#">
+                        <a href="{{ url_for('ending') }}">
                             <i class='bx bx-send icon'></i>
                             <span class="text nav-text">Entrega</span>
                         </a>
@@ -69,7 +73,7 @@
                 </ul>
             </div>
             <div class="bottom-content">
-                <li class="">
+                <li class="" id="setting">
                     <a href="{{ url_for('settings') }}">
                         <i class='bx bx-cog icon'></i>
                         <span class="text nav-text">Ajustes</span>
